# psl-omi-provider

./: .gitignore  .gitmodules  .travis.yml  BufferManipulation.c  BufferManipulation.h  CMakeLists.txt  CONTRIBUTING.md  Command.c  EnvironmentVariable.h  GNUmakefile  LICENSE  README.md  Shell.c  Shell.h  ShellAPI.c  ShellAPI.h  Stream.h  TestShell.reg  build.sh  omi.version  psrp.version  psrpomiprov.reg  run.sh  schema.c  schema.mof  wsman.h  xpress.c  xpress.h
installbuilder/: GNUmakefile  README.md  buildNuget.sh
installbuilder/datafiles/: Psrp.data
installbuilder/nuget/: libpsrpclient.nuspec
src/: .gitignore  BufferManipulation.c  BufferManipulation.h  CMakeLists.txt  Client.c  Command.c  Command.h  CommandState.h  DesiredStream.h  Shell.c  Stream.h  Utilities.c  Utilities.h  coreclrutil.cpp  coreclrutil.h  schema.c  schema.mof  wsman.h  xpress.c  xpress.h
test/: PSRP.Tests.ps1  README.md  build.psm1  enableNTLM.sh  installPSRP.sh  installpowershell.sh  setPSRPTest.ps1  setPSRPTest.sh  uninstallPSRP.sh
test/LabTests/: LinuxToWindows.tests.ps1  Office365.tests.ps1  PSRPTests.Common.psm1
test/TestDesign/: TestDesignSpecificationForPSRP.md
